--- a/songbird/index.html
+++ b/songbird/index.html
@@ -10,6 +10,41 @@
         <title>Song bird</title>
     </head>
     <body>
+        <div class="header" id="header">
+            <div class="container header-container">
+                <div class="top-header">
+                    <div class="logo"></div>
+                    <h5>Score: 
+                        <span class="score" id="score"></span>
+                    </h5>
+                </div>
+                <div class="bottom-header">
+                    <nav class="nav">
+                        <ul class="nav-list">
+                            <li class="nav-item active">
+                                <a href="#warm-up" class="nav-link">Разминка</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#sparrows" class="nav-link">Воробьиные</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#forest-birds" class="nav-link">Лесные птицы</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#song-birds" class="nav-link">Певчие птицы</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#predator-birds" class="nav-link">Хищные птицы</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#sea-birds" class="nav-link">Морские птицы</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    
         
         <script src="../songbird/index.js"></script>
         <script src="../songbird/src/index.ts"></script>
