feat: add footer to index.html

--- a/songbird/index.html
+++ b/songbird/index.html
@@ -45,7 +45,13 @@
             </div>
         </div>
     
-        
+        <footer class="footer" id="footer">
+            <div class="footer-container container">
+                <a href="https://github.com/JuchKasia" class="github-link"></a>
+                <div class="year">2022</div>
+                <a href="https://rs.school/js/" class="rss-link"></a>
+            </div>
+        </footer>
         <script src="../songbird/index.js"></script>
         <script src="../songbird/src/index.ts"></script>
 
