feat: add to index.html section-quiz, quiz-container, block-answer and values

--- a/songbird/index.html
+++ b/songbird/index.html
@@ -44,6 +44,42 @@
                 </div>
             </div>
         </div>
+        <section class="quiz" id="quiz">
+            <div class="container quiz-container">
+                <div class="block-question question" id="question"></div>
+                <div class="block-answer answer" id="answer">
+                    <div class="values" id="values">
+                        <ul class="item-list list">
+                            <li class="list__item item">
+                                <span class="radio-btn"></span>
+                                Ворон
+                            </li>
+                            <li class="list__item item">
+                                <span class="radio-btn"></span>
+                                Журавль
+                            </li>
+                            <li class="list__item item">
+                                <span class="radio-btn"></span>
+                                Ласточка
+                            </li>
+                            <li class="list__item item">
+                                <span class="radio-btn"></span>
+                                Козодой
+                            </li>
+                            <li class="list__item item">
+                                <span class="radio-btn"></span>
+                                Кукушка
+                            </li>
+                            <li class="list__item item">
+                                <span class="radio-btn"></span>
+                                Синица
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+        </section>
     
         <footer class="footer" id="footer">
             <div class="footer-container container">
