fix: correct block-values in index.html

--- a/songbird/index.html
+++ b/songbird/index.html
@@ -48,35 +48,22 @@
             <div class="container quiz-container">
                 <div class="block-question question" id="question"></div>
                 <div class="block-answer answer" id="answer">
-                    <div class="values" id="values">
-                        <ul class="item-list list">
-                            <li class="list__item item">
-                                <span class="radio-btn"></span>
-                                Ворон
-                            </li>
-                            <li class="list__item item">
-                                <span class="radio-btn"></span>
-                                Журавль
-                            </li>
-                            <li class="list__item item">
-                                <span class="radio-btn"></span>
-                                Ласточка
-                            </li>
-                            <li class="list__item item">
-                                <span class="radio-btn"></span>
-                                Козодой
-                            </li>
-                            <li class="list__item item">
-                                <span class="radio-btn"></span>
-                                Кукушка
-                            </li>
-                            <li class="list__item item">
-                                <span class="radio-btn"></span>
-                                Синица
-                            </li>
-                        </ul>
+                    <div class="block-values values" id="values">
+                        <div class="item-list list">
+                            <input type="radio" name="question-1" id="answer-1" class="answer" value="false">
+                            <label for="answer-1">Ворон</label>
+                            <input type="radio" name="question-2" id="answer-2" class="answer" value="false">
+                            <label for="answer-2">Журавль</label>
+                            <input type="radio" name="question-3" id="answer-3" class="answer" value="false">
+                            <label for="answer-3">Ласточка</label>
+                            <input type="radio" name="question-4" id="answer-4" class="answer" value="false">
+                            <label for="answer-4">Козодой</label>
+                            <input type="radio" name="question-5" id="answer-5" class="answer" value="false">
+                            <label for="answer-5">Кукушка</label>
+                            <input type="radio" name="question-1" id="answer-1" class="answer" value="false">
+                            <label for="answer-1">Синица</label>
+                        </div>
                     </div>
-
                 </div>
             </div>
         </section>
