feat: add card-body to block-about

--- a/songbird/index.html
+++ b/songbird/index.html
@@ -64,6 +64,40 @@
                             <label for="answer-1">Синица</label>
                         </div>
                     </div>
+                    <div class="block-about" id="about">
+                        <p class="instruction">
+                            <span>Послушайте плеер</span>
+                            <span>Выбериите птицу из списка</span>
+                        </p>
+                        <div class="card-body">
+                            <img src="https://live.staticflickr.com//65535//49298804222_474cfe8682.jpg" class="bird-img">
+                            <ul class="card-list list">
+                                <li class="list__item item">
+                                    <h4 class="item__title title">Ворон</h4>
+                                </li>
+                                <li class="list__item item">
+                                    <span>Corvus corax</span>
+                                </li>
+                                <li class="list__item item">
+                                    <div class="audio-player">
+                                        <audio src="https://www.xeno-canto.org/sounds/uploaded/XIQVMQVUPP/XC518684-Grands%20corbeaux%2009012020%20Suzon.mp3"></audio>
+                                        <div class="controls">
+                                            <div class="play-btn"></div>
+                                        </div>
+                                        <div class="time-bar">
+                                            <div class="time-line"></div>
+                                            <div class="time-square"></div>
+                                            <div class="time-info">
+                                                <div class="time-start">00:00</div>
+                                                <div class="time-end">00:12</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </section>
