feat: add card-description

--- a/songbird/index.html
+++ b/songbird/index.html
@@ -96,7 +96,12 @@
                                 </li>
                             </ul>
                         </div>
-
+                        <span class="card-description">
+                            Ворон – крупная птица. Длина тела достигает 70 сантиметров,
+                             размах крыльев – до полутора метров. Вороны населяют окрестности Тауэра.
+                              В Англии бытует поверье, что в день, когда черные вороны улетят от Тауэра,
+                               монархия рухнет.
+                        </span>
                     </div>
                 </div>
             </div>
