--- a/songbird/index.html
+++ b/songbird/index.html
@@ -104,6 +104,7 @@
                         </span>
                     </div>
                 </div>
+                <button type="submit" class="next-btn btn">Next level</button>
             </div>
         </section>
     
