feat: add description of block question

--- a/songbird/index.html
+++ b/songbird/index.html
@@ -46,7 +46,30 @@
         </div>
         <section class="quiz" id="quiz">
             <div class="container quiz-container">
-                <div class="block-question question" id="question"></div>
+                <div class="block-question question" id="question">
+                    <img src="https://live.staticflickr.com/65535/49221158846_b0b69a58f1.jpg" class="bird-img">
+                    <ul class="card-list list">
+                        <li class="list__item item">
+                            <h3 class="item__title title">Ворон</h3>
+                        </li>
+                        <li class="list__item item">
+                            <div class="audio-player">
+                                <audio src="https://www.xeno-canto.org/sounds/uploaded/BLMSIUFTFU/XC512582-190604_1087_Grus_tok.mp3"></audio>
+                                <div class="controls">
+                                    <div class="play-btn"></div>
+                                </div>
+                                <div class="time-bar">
+                                    <div class="time-line"></div>
+                                    <div class="time-square"></div>
+                                    <div class="time-info">
+                                        <div class="time-start">00:00</div>
+                                        <div class="time-end">00:06</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
                 <div class="block-answer answer" id="answer">
                     <div class="block-values values" id="values">
                         <div class="item-list list">
@@ -107,7 +130,6 @@
                 <button type="submit" class="next-btn btn">Next level</button>
             </div>
         </section>
-    
         <footer class="footer" id="footer">
             <div class="footer-container container">
                 <a href="https://github.com/JuchKasia" class="github-link"></a>
