feat: rename item-list to values-list

--- a/songbird/index.html
+++ b/songbird/index.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="block-answer answer" id="answer">
                     <div class="block-values values" id="values">
-                        <div class="item-list list">
+                        <div class="values-list">
                             <input type="radio" name="question-1" id="answer-1" class="answer" value="false">
                             <label for="answer-1">Ворон</label>
                             <input type="radio" name="question-2" id="answer-2" class="answer" value="false">
