feat: add style to card list item section quiz

--- a/songbird/index.html
+++ b/songbird/index.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
         </div>
-        <section class="quiz" id="quiz">
+        <section class="section-quiz quiz" id="quiz">
             <div class="container quiz-container">
                 <div class="block-question question" id="question">
                     <img src="https://live.staticflickr.com/65535/49221158846_b0b69a58f1.jpg" class="bird-img">
@@ -53,7 +53,7 @@
                             <h3 class="item__title title">Ворон</h3>
                         </li>
                         <li class="list__item item">
-                            <div class="audio-player">
+                            <div class="item__audio-player">
                                 <audio src="https://www.xeno-canto.org/sounds/uploaded/BLMSIUFTFU/XC512582-190604_1087_Grus_tok.mp3"></audio>
                                 <div class="controls">
                                     <div class="play-btn"></div>
