fix: correct style of block-values

--- a/songbird/index.html
+++ b/songbird/index.html
@@ -72,20 +72,32 @@
                 </div>
                 <div class="block-answer answer" id="answer">
                     <div class="block-values values" id="values">
-                        <div class="values-list">
-                            <input type="radio" name="question-1" id="answer-1" class="answer" value="false">
-                            <label for="answer-1">Ворон</label>
-                            <input type="radio" name="question-2" id="answer-2" class="answer" value="false">
-                            <label for="answer-2">Журавль</label>
-                            <input type="radio" name="question-3" id="answer-3" class="answer" value="false">
-                            <label for="answer-3">Ласточка</label>
-                            <input type="radio" name="question-4" id="answer-4" class="answer" value="false">
-                            <label for="answer-4">Козодой</label>
-                            <input type="radio" name="question-5" id="answer-5" class="answer" value="false">
-                            <label for="answer-5">Кукушка</label>
-                            <input type="radio" name="question-1" id="answer-1" class="answer" value="false">
-                            <label for="answer-1">Синица</label>
-                        </div>
+                        <ul class="values-list list">
+                            <li class="list__item">
+                                <input type="radio" name="question-1" id="answer-1" class="answer" value="false">
+                                <label for="answer-1">Ворон</label>
+                            </li>
+                            <li class="list__item">
+                                <input type="radio" name="question-2" id="answer-2" class="answer" value="false">
+                                <label for="answer-2">Журавль</label>
+                            </li>
+                            <li class="list__item">
+                                <input type="radio" name="question-3" id="answer-3" class="answer" value="false">
+                                <label for="answer-3">Ласточка</label>
+                            </li>
+                            <li class="list__item">
+                                <input type="radio" name="question-4" id="answer-4" class="answer" value="false">
+                                <label for="answer-4">Козодой</label>
+                            </li>
+                            <li class="list__item">
+                                <input type="radio" name="question-5" id="answer-5" class="answer" value="false">
+                                <label for="answer-5">Кукушка</label>
+                            </li>
+                            <li class="list__item">
+                                <input type="radio" name="question-1" id="answer-1" class="answer" value="false">
+                                <label for="answer-1">Синица</label>
+                            </li>   
+                        </ul>
                     </div>
                     <div class="block-about" id="about">
                         <p class="instruction">
