feat add style to block-about

--- a/songbird/index.html
+++ b/songbird/index.html
@@ -101,8 +101,8 @@
                     </div>
                     <div class="block-about" id="about">
                         <p class="instruction">
-                            <span>Послушайте плеер</span>
-                            <span>Выбериите птицу из списка</span>
+                            <span class="instruction__item-in1">Послушайте плеер</span>
+                            <span class="instruction__item-in2">Выбериите птицу из списка</span>
                         </p>
                         <div class="card-body">
                             <img src="https://live.staticflickr.com//65535//49298804222_474cfe8682.jpg" class="bird-img">
